force-app/main/default/objects/Product_Usage__c/Product_Usage__c.object-meta.xml
<CustomObject>
    <description>Information about the surgeon&apos;s volume of Zimmer products used</description>
    <label>Product Usage</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Product Use Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Usage</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>