force-app/main/default/objects/Product_Usage__c/fields/Aligned_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Aligned_Rep_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Aligned Rep Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>