force-app/main/default/objects/Product_Usage__c/fields/BatchCheck__c.field-meta.xml
<CustomField>
    <fullName>BatchCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BatchCheck</label>
    <type>Checkbox</type>
</CustomField>