force-app/main/default/objects/Product_Usage__c/fields/Brand_Desc__c.field-meta.xml
<CustomField>
    <fullName>Brand_Desc__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Brand Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>