force-app/main/default/objects/Product_Usage__c/fields/Brand_Flag__c.field-meta.xml
<CustomField>
    <fullName>Brand_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brand Flag</label>
    <type>Checkbox</type>
</CustomField>