force-app/main/default/objects/Product_Usage__c/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Code</label>
    <length>120</length>
    <type>Text</type>
</CustomField>