force-app/main/default/objects/Product_Usage__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Product_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Acumed</fullName>
            </value>
            <value>
                <fullName>Bard</fullName>
            </value>
            <value>
                <fullName>Biomet</fullName>
            </value>
            <value>
                <fullName>Cardinal</fullName>
            </value>
            <value>
                <fullName>DePuy</fullName>
            </value>
            <value>
                <fullName>DJO Surgical</fullName>
            </value>
            <value>
                <fullName>Exactech</fullName>
            </value>
            <value>
                <fullName>Linvatec</fullName>
            </value>
            <value>
                <fullName>Smith &amp; Nephew</fullName>
            </value>
            <value>
                <fullName>Stryker/Howmedica/Osteonics</fullName>
            </value>
            <value>
                <fullName>Synthes</fullName>
            </value>
            <value>
                <fullName>Tornier</fullName>
            </value>
            <value>
                <fullName>Wright Medical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>