force-app/main/default/objects/Product_Usage__c/fields/Date_Range__c.field-meta.xml
<CustomField>
    <fullName>Date_Range__c</fullName>
    <formula>Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Range</label>
    <type>Date</type>
</CustomField>