force-app/main/default/objects/Product_Usage__c/fields/Distributor_Name__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Distributor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>