force-app/main/default/objects/Product_Usage__c/fields/Financial_Sales_Amount__c.field-meta.xml
<CustomField>
    <fullName>Financial_Sales_Amount__c</fullName>
    <label>Financial Sales Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>