force-app/main/default/objects/Product_Usage__c/fields/Financial_Sales_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Financial_Sales_Quantity__c</fullName>
    <label>Financial Sales Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>