force-app/main/default/objects/Product_Usage__c/fields/GBI_Brand__c.field-meta.xml
<CustomField>
    <fullName>GBI_Brand__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>