force-app/main/default/objects/Product_Usage__c/fields/GBI_External_Key__c.field-meta.xml
<CustomField>
    <fullName>GBI_External_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>GBI External Key</label>
    <length>120</length>
    <type>Text</type>
</CustomField>