force-app/main/default/objects/Product_Usage__c/fields/GBI_Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>GBI_Market_Segment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Market Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>