force-app/main/default/objects/Product_Usage__c/fields/GBI_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>GBI_Product_Category__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Category</label>
    <length>250</length>
    <type>Text</type>
</CustomField>