force-app/main/default/objects/Product_Usage__c/fields/GBI_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>GBI_Product_Group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GBI Product Group</label>
    <length>250</length>
    <type>Text</type>
</CustomField>