force-app/main/default/objects/Product_Usage__c/fields/GBI_Sub_Brand__c.field-meta.xml
<CustomField>
    <fullName>GBI_Sub_Brand__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sub Brand</label>
    <length>250</length>
    <type>Text</type>
</CustomField>