force-app/main/default/objects/Product_Usage__c/fields/IMS_Procedure__c.field-meta.xml
<CustomField>
    <fullName>IMS_Procedure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IMS Market Procedure</label>
    <type>Checkbox</type>
</CustomField>