force-app/main/default/objects/Product_Usage__c/fields/Invoice_Sales_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Sales_Quantity__c</fullName>
    <label>Invoice Sales Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>