force-app/main/default/objects/Product_Usage__c/fields/Item_Material_number__c.field-meta.xml
<CustomField>
    <fullName>Item_Material_number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Item Material number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>