force-app/main/default/objects/Product_Usage__c/fields/Market_Units__c.field-meta.xml
<CustomField>
    <fullName>Market_Units__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Suggests that data entered is Zimmer Biomet product usage if unchecked.</description>
    <label>Market Procedures</label>
    <type>Checkbox</type>
</CustomField>