force-app/main/default/objects/Product_Usage__c/fields/Matching_Date_New__c.field-meta.xml
<CustomField>
    <fullName>Matching_Date_New__c</fullName>
    <formula>If(
	OR(
		AND	(
			Date__c &lt; TODAY(),
			Date__c &gt;= DATE( YEAR( TODAY() ),MONTH(TODAY()),01)
			),
		AND	(
			Date__c &lt; DATE( YEAR( TODAY())-1 ,MONTH(TODAY()),DAY(TODAY())),
			Date__c&gt;= DATE( YEAR( TODAY())-1 ,MONTH(TODAY()),01)
			)
		), 
	TRUE,
	FALSE
	)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matching Month</label>
    <type>Checkbox</type>
</CustomField>