force-app/main/default/objects/Product_Usage__c/fields/MM_Current__c.field-meta.xml
<CustomField>
    <fullName>MM_Current__c</fullName>
    <formula>If( 
AND	( 
	Date__c &lt;= TODAY(), 
	Date__c &gt;= DATE( YEAR( TODAY() ),MONTH(TODAY()),01) 
	)
, 
TRUE, 
FALSE 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MM- Current</label>
    <type>Checkbox</type>
</CustomField>