force-app/main/default/objects/Product_Usage__c/fields/MM_Previous__c.field-meta.xml
<CustomField>
    <fullName>MM_Previous__c</fullName>
    <formula>If( 
AND	( 
	Date__c &lt;= DATE( YEAR( TODAY())-1 ,MONTH(TODAY()),DAY(TODAY())), 
	Date__c&gt;= DATE( YEAR( TODAY())-1 ,MONTH(TODAY()),01) 
	) 
, 
TRUE, 
FALSE 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MM- Previous</label>
    <type>Checkbox</type>
</CustomField>