force-app/main/default/objects/Product_Usage__c/fields/Pending_Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pending_Order_Amount__c</fullName>
    <label>Pending Order Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>