force-app/main/default/objects/Product_Usage__c/fields/Previous_MTD__c.field-meta.xml
<CustomField>
    <fullName>Previous_MTD__c</fullName>
    <formula>If( 
	OR( 

	AND( 
	MONTH(TODAY())==1,
	Date__c &gt;= DATE( YEAR( TODAY() )-1,12,01) , 
	Date__c &lt; DATE( YEAR( TODAY()) ,01,01) 

	) 
	, 
	AND	( 
	MONTH(TODAY())==1,
	Date__c &gt;= DATE( YEAR( TODAY() )-2,12,01) , 
	Date__c &lt; DATE( YEAR( TODAY())-1 ,01,01) 
	),

	AND( 
	MONTH(TODAY())!=1,
	Date__c &gt;= DATE( YEAR( TODAY() ),MONTH(TODAY())-1,01) , 
	Date__c &lt; DATE( YEAR( TODAY()) ,MONTH(TODAY()),01) 

	) 
	, 
	AND	( 
	MONTH(TODAY())!=1,
	Date__c &gt;= DATE( YEAR( TODAY() )-1,MONTH(TODAY())-1,01) , 
	Date__c &lt; DATE( YEAR( TODAY())-1 ,MONTH(TODAY()),01) 
	) 	
	
	) 
	
	
, 
TRUE, 
FALSE 
)</formula>
    <label>Previous MTD</label>
    <type>Checkbox</type>
</CustomField>