force-app/main/default/objects/Product_Usage__c/fields/Product_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Product_Subcategory__c</fullName>
    <label>Product Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Category__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AC_Joint_Repair</fullName>
            </value>
            <value>
                <fullName>ACL_PCL_Reconstruction</fullName>
            </value>
            <value>
                <fullName>Anatomical Fracture Shoulder System</fullName>
            </value>
            <value>
                <fullName>Anatomical Inverse/Reverse Shoulder</fullName>
            </value>
            <value>
                <fullName>Anatomical Shoulder System</fullName>
            </value>
            <value>
                <fullName>Arthrocentesis</fullName>
            </value>
            <value>
                <fullName>Articular Surface Implants</fullName>
            </value>
            <value>
                <fullName>Augments, Bone Screws &amp; Stem Extensions</fullName>
            </value>
            <value>
                <fullName>Bigliani/Flatow Shoulder</fullName>
            </value>
            <value>
                <fullName>BIOLOGICS</fullName>
            </value>
            <value>
                <fullName>Bipolar Cups</fullName>
            </value>
            <value>
                <fullName>Blood Management</fullName>
            </value>
            <value>
                <fullName>Bone Cement &amp; Accessories</fullName>
            </value>
            <value>
                <fullName>Bone Cement + Accessories</fullName>
            </value>
            <value>
                <fullName>Bone Cement and Accessories</fullName>
            </value>
            <value>
                <fullName>Bone Drills and Bits</fullName>
            </value>
            <value>
                <fullName>Bone Substitutes</fullName>
            </value>
            <value>
                <fullName>Cable Products</fullName>
            </value>
            <value>
                <fullName>Cannulated/Specialty Screws</fullName>
            </value>
            <value>
                <fullName>Compression Hip Screws</fullName>
            </value>
            <value>
                <fullName>Coonrad/Morrey Total Elbow</fullName>
            </value>
            <value>
                <fullName>Elbow</fullName>
            </value>
            <value>
                <fullName>Elbow_Replacement</fullName>
            </value>
            <value>
                <fullName>External Fixation</fullName>
            </value>
            <value>
                <fullName>Femoral Heads</fullName>
            </value>
            <value>
                <fullName>Femoral Implants</fullName>
            </value>
            <value>
                <fullName>Foot_Ankle_Repair</fullName>
            </value>
            <value>
                <fullName>Fracture Stems</fullName>
            </value>
            <value>
                <fullName>Gender Solutions Natural-Knee Flex</fullName>
            </value>
            <value>
                <fullName>Gender Solutions PFJ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>