force-app/main/default/objects/Product_Usage__c/fields/Product_Usage_Summary__c.field-meta.xml
<CustomField>
    <fullName>Product_Usage_Summary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Usage Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>