force-app/main/default/objects/Product_Usage__c/fields/ProductUsageAccountGender__c.field-meta.xml
<CustomField>
    <fullName>ProductUsageAccountGender__c</fullName>
    <formula>TEXT(Surgeon__r.Gender__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProductUsageAccountGender</label>
    <type>Text</type>
</CustomField>