force-app/main/default/objects/Product_Usage__c/fields/Rep_Access__c.field-meta.xml
<CustomField>
    <fullName>Rep_Access__c</fullName>
    <formula>If( AND(Rep_Code__c&lt;&gt;&apos;&apos;,Rep_Code__c = $User.Rep_Code__c, Rep_Team__c=&apos;&apos;) , 
True, 
False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rep Access</label>
    <type>Checkbox</type>
</CustomField>