force-app/main/default/objects/Product_Usage__c/fields/Rep_Code__c.field-meta.xml
<CustomField>
    <fullName>Rep_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Aligned Rep Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>