force-app/main/default/objects/Product_Usage__c/fields/Rep_Team__c.field-meta.xml
<CustomField>
    <fullName>Rep_Team__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Aligned Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>