force-app/main/default/objects/Product_Usage__c/fields/Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Order Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>