force-app/main/default/objects/Product_Usage__c/fields/Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price__c</fullName>
    <description>Sales Price</description>
    <inlineHelpText>Sales Price for this number of units</inlineHelpText>
    <label>Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>