force-app/main/default/objects/Product_Usage__c/fields/Shipto_Number__c.field-meta.xml
<CustomField>
    <fullName>Shipto_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ShipTo Account Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>