force-app/main/default/objects/Product_Usage__c/fields/Sub_Brand__c.field-meta.xml
<CustomField>
    <fullName>Sub_Brand__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sub Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>