force-app/main/default/objects/Product_Usage__c/fields/Surgeon__c.field-meta.xml
<CustomField>
    <fullName>Surgeon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Surgeon</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Usage</relationshipLabel>
    <relationshipName>Product_Usage_Account</relationshipName>
    <type>Lookup</type>
</CustomField>