force-app/main/default/objects/Product_Usage__c/fields/Teams_Multiselect_Access__c.field-meta.xml
<CustomField>
    <fullName>Teams_Multiselect_Access__c</fullName>
    <formula>If 
( 
OR(AND( Rep_Team__c&lt;&gt;&apos;&apos;,CONTAINS(  LOWER($User.Teams__c) , (LOWER(Rep_Team__c) &amp;&quot;;&quot;))),
AND( Rep_Team__c&lt;&gt;&apos;&apos;,CONTAINS(  LOWER($User.Teams2__c) , (LOWER(Rep_Team__c) &amp;&quot;;&quot;))),
AND( Rep_Team__c&lt;&gt;&apos;&apos;,CONTAINS(  LOWER($User.Teams3__c) , (LOWER(Rep_Team__c) &amp;&quot;;&quot;))) ) 

,True,False)</formula>
    <label>Teams Multiselect Access</label>
    <type>Checkbox</type>
</CustomField>