force-app/main/default/objects/Product_Usage__c/fields/Technique__c.field-meta.xml
<CustomField>
    <fullName>Technique__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Technique</label>
    <type>TextArea</type>
</CustomField>