force-app/main/default/objects/Product_Usage__c/fields/Total_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Volume__c</fullName>
    <description>Zimmer Annual Units Total from Previous Year</description>
    <label>Units</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>