force-app/main/default/objects/Product_Usage__c/fields/Transactional_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Transactional_Rep_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transactional Rep Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>