force-app/main/default/objects/Product_Usage__c/fields/Transactional_Sales_Rep_ID__c.field-meta.xml
<CustomField>
    <fullName>Transactional_Sales_Rep_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transactional Rep ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>