force-app/main/default/objects/Product_Usage__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>