force-app/main/default/objects/Product_Usage__c/fields/ZB_Procedure__c.field-meta.xml
<CustomField>
    <fullName>ZB_Procedure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if procedure or line iteam</description>
    <label>ZB Procedures</label>
    <type>Checkbox</type>
</CustomField>